# sitl_gazebo

./: CMakeLists.txt  package.xml
cmake/: 50_sitl_gazebo_setup.sh.in
include/: gazebo_geotagged_images_plugin.h  gazebo_mavlink_interface.h
models/fpv_cam/: fpv_cam.sdf  fpv_cam.sdf.xacro  fpv_cam.urdf.xacro
models/geotagged_cam/: geotagged_cam.sdf.xacro
models/ir_cam/: ir_cam.sdf.xacro
models/iris/: iris.sdf.xacro  iris.urdf.xacro
models/plane/: plane.sdf.xacro  plane.urdf.xacro
models/rotors_description/urdf/: component_snippets.xacro  iris_base.xacro  multirotor_base.xacro
models/typhoon_h480/: typhoon_h480.sdf  typhoon_h480.sdf.xacro
src/: gazebo_geotagged_images_plugin.cpp  gazebo_mavlink_interface.cpp  gazebo_motor_model.cpp
worlds/: delta_wing.world  empty.world  iris.world  iris_opt_flow.world  plane.world  rubble.world  solo.world  standard_vtol.world  tailsitter.world  typhoon_h480.world  warehouse.world
